# o8

./: .gitignore  10.40.0.103  Cargo.toml  LICENSE  README.md  bench2.txt  bench3.txt  python_o8.py
benchmarks/: bench1.txt  bench4.txt  bench5.txt  bench6.txt
src/: board.rs  main.rs  search_strategies.rs  solver.rs  stats.rs
